terraform/platforminfra/nat.tf
# Cloud Router for NAT Gateway
resource "google_compute_router" "router" {
  name    = "${var.vpc_name}-router"
  region  = var.region
  network = google_compute_network.vpc.id
  project = var.project_id

  bgp {
    asn = 64514
  }
}

# NAT Gateway for private nodes to access internet
resource "google_compute_router_nat" "nat" {
  name                               = "${var.vpc_name}-nat"
  router                             = google_compute_router.router.name
  region                             = var.region
  project                            = var.project_id
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "LIST_OF_SUBNETWORKS"

  subnetwork {
    name                    = google_compute_subnetwork.regional_subnet.self_link
    source_ip_ranges_to_nat = ["ALL_IP_RANGES"]
  }


  log_config {
    enable = true
    filter = "ERRORS_ONLY"
  }
}
